# CycleGan_lightning

./: .gitignore  pyproject.toml
_.github/workflows/: pytest_gitgist.yaml
configs/: monet_default.yaml
cycle_gan/: main.py
cycle_gan/augmentations/: standard_transforms.py
cycle_gan/dataset/: monet_dataset.py
cycle_gan/dataset/monet/: dataset.py
cycle_gan/models/: blocks.py  discriminators.py  pl_cycle_gan.py  unet_generators.py
cycle_gan/utils/: configs.py  training.py
