[tool.poetry]
name = "cycle_gan"
version = "0.1.0"
description = "Cycle GAN implementation in Pytorch Ligtning"
authors = ["David Wessels <davidwessels15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
numpy = "^1.24.1"
pytest = "^7.2.0"
coverage = "^7.0.3"
coverage-badge = "^1.1.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
torch = "^1.13.0"
torchvision = "^0.14.0"
pytorch-lightning = "^1.9.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
